[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Pause_menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Menu/pause.png" type="Texture" id=2]
[ext_resource path="res://GUI/main_theme.tres" type="Theme" id=3]
[ext_resource path="res://Scenes/Scene_Transition.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Anim_in"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 3, 0.5, 1, 0.5 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 3.3, 2.8 ), Vector2( 2.8, 3.3 ), Vector2( 3, 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer/VBoxContainer/B_Resume:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 3, 0.5, 1, 0.5 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1e-05, 1e-05 ), Vector2( 1.2, 0.9 ), Vector2( 0.9, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/VBoxContainer/B_Main_Menu:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 3, 0.5, 1, 0.5 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1e-05, 1e-05 ), Vector2( 1.2, 0.9 ), Vector2( 0.9, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Anim_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 2, 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ), Vector2( 1e-05, 1e-05 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer/VBoxContainer/B_Resume:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 3, 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/VBoxContainer/B_Main_Menu:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 3, 2 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}

[node name="Pause_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1200, 900 )
input_pass_on_modal_close_click = false
script = ExtResource( 1 )

[node name="B_Dummy" type="Button" parent="."]
anchor_left = 0.514167
anchor_top = -0.243778
anchor_right = 0.514167
anchor_bottom = -0.243778
margin_left = -77.0
margin_top = -19.6
margin_right = 73.0
margin_bottom = 20.4
rect_min_size = Vector2( 150, 40 )
rect_pivot_offset = Vector2( 75, 20 )
focus_neighbour_top = NodePath("../CenterContainer/VBoxContainer/B_Main_Menu")
focus_neighbour_bottom = NodePath("../CenterContainer/VBoxContainer/B_Resume")
focus_next = NodePath("../CenterContainer/VBoxContainer/B_Resume")
focus_previous = NodePath("../CenterContainer/VBoxContainer/B_Main_Menu")
theme = ExtResource( 3 )
text = "Dummy"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1200, 900 )
input_pass_on_modal_close_click = false

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 525.0
margin_top = 408.0
margin_right = 675.0
margin_bottom = 492.0
mouse_filter = 0
input_pass_on_modal_close_click = false

[node name="B_Resume" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 150.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
rect_pivot_offset = Vector2( 75, 20 )
focus_neighbour_bottom = NodePath("../B_Main_Menu")
focus_next = NodePath("../B_Main_Menu")
theme = ExtResource( 3 )
text = "Resume"

[node name="B_Main_Menu" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 150.0
margin_bottom = 84.0
rect_min_size = Vector2( 150, 40 )
rect_pivot_offset = Vector2( 75, 20 )
focus_neighbour_top = NodePath("../B_Resume")
focus_previous = NodePath("../B_Resume")
theme = ExtResource( 3 )
text = "Main Menu"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 600, 260 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 2 )

[node name="Transition" parent="." instance=ExtResource( 4 )]

[node name="TimerMainMenu" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Anim_in = SubResource( 1 )
anims/Anim_out = SubResource( 2 )

[node name="TimerResume" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="pressed" from="B_Dummy" to="." method="_on_B_Resume_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/B_Resume" to="." method="_on_B_Resume_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/B_Resume" to="." method="_on_B_Resume_mouse_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/B_Resume" to="." method="_on_B_Resume_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/B_Main_Menu" to="." method="_on_B_Main_Menu_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/B_Main_Menu" to="." method="_on_B_Main_Menu_mouse_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/B_Main_Menu" to="." method="_on_B_Main_Menu_pressed"]
[connection signal="timeout" from="TimerMainMenu" to="." method="_on_TimerMainMenu_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="TimerResume" to="." method="_on_TimerResume_timeout"]
